# open-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
scripts/: generate-icon.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  helpers.rs  lib.rs  main.rs  monitor.rs  network.rs  protocols.rs  pty.rs  s3.rs  session.rs  sftp.rs  ssh.rs  tools.rs  types.rs
src-tauri/tests/: basic.rs
src/components/: ClipboardHistory.tsx  CommandPalette.tsx  ConnectionDialog.tsx  EditSessionDialog.tsx  EnvVarManager.tsx  EnvironmentHub.tsx  LocalServerManager.tsx  MacroManager.tsx  MultiExecBar.tsx  NetworkCapture.tsx  NetworkTools.tsx  PasswordManager.tsx  PortScanner.tsx  QuickConnect.tsx  RemoteFileEditor.tsx  RemoteMonitor.tsx  S3Browser.tsx  SessionImportExport.tsx  SessionManager.tsx  SettingsDialog.tsx  SftpSidebar.tsx  SnippetManager.tsx  SshKeyManager.tsx  StatusBar.tsx  TabBar.tsx  TemplateManager.tsx  TerminalPanel.tsx  TitleBar.tsx  TunnelManager.tsx  WelcomeTab.tsx  WolDialog.tsx
src/hooks/: useTerminalSessions.ts
src/styles/: global.css
