[package]
name = "open-terminal"
version = "1.0.0"
edition = "2021"

[lib]
name = "open_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
ssh2 = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
lazy_static = "1"
dirs = "5"
chrono = "0.4"
serialport = "4"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
hostname = "0.4"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
socket2 = { version = "0.5", features = ["all"] }
tauri-plugin-updater = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
